@@ -62,12 +62,13 @@ tasks.named("processAot") {
 }
 
 tasks.named("nativeCompile") {
-    nativeCompile.options.get()
-            .asCompileOptions().buildArgs
+    def options = nativeCompile.options.get().asCompileOptions()
+    options.buildArgs
             .add("--initialize-at-build-time=ch.qos.logback.classic.Logger,org.slf4j.LoggerFactory" +
                     ",ch.qos.logback.core.status.StatusBase" +
                     ",ch.qos.logback.classic.Level,ch.qos.logback.core.CoreConstants,org.slf4j.MDC" +
                     ",ch.qos.logback.core.util.StatusPrinter,ch.qos.logback.core.util.Loader")
+    options.jvmArgs.addAll("--enable-preview", "--add-modules=jdk.incubator.concurrent") // for unnamed module
 }
 
 if (kotlinEnable) {
